--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="img/6960162146_115c1e1e-6d87-4ba7-8a3a-28c289903f2bini.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>US MAN</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Usman</h1>
+    <p>My name is usman</p>
   </body>
 </html>
