Build markup for the whole layout

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     />
     <title>US MAN</title>
   </head>
-  <body>
-    <h1>Usman</h1>
-    <p>My name is usman</p>
+  <body class="container">
+    <header class="header">Header</header>
+    <section class="hero-section">Hero Section</section>
+    <section class="about__picture">About Picture</section>
+    <section class="about__content">About Content</section>
+    <section class="services">Services</section>
+    <section class="portfolio">Portfolio</section>
+    <footer class="footer">Footer</footer>
   </body>
 </html>
