--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <section class="about__content">About Content</section>
     <section class="services">Services</section>
     <section class="portfolio">Portfolio</section>
-    <footer class="footer">Footer</footer>
+    <footer class="footer">Footer1</footer>
   </body>
 </html>
