--- a/index.html
+++ b/index.html
@@ -19,12 +19,46 @@
     <title>US MAN</title>
   </head>
   <body class="container">
-    <header class="header">Header</header>
+    <header class="header">
+      <div class="header__logo-box">
+        <img
+          src="img/6960162146_115c1e1e-6d87-4ba7-8a3a-28c289903f2bini.png"
+          alt="Logo"
+          class="header__logo"
+        />
+      </div>
+
+      <div class="header__navigation">
+        <span class="header__navigation--button btn">Menu</span>
+        <div class="header__navigation--background">&nbsp;</div>
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-link">Home</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-link">About</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-link">Services</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-link">Portfolio</a>
+            </li>
+            <li class="header__nav-item">
+              <a href="#" class="header__nav-link">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <section class="hero-section">Hero Section</section>
     <section class="about__picture">About Picture</section>
     <section class="about__content">About Content</section>
     <section class="services">Services</section>
     <section class="portfolio">Portfolio</section>
     <footer class="footer">Footer1</footer>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
