--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         />
       </div>
 
-      <div class="header__navigation">
-        <span class="header__navigation--button btn">Menu</span>
+      <div class="header__navigation btn">
+        <div class="header__navigation--button">
+          <span class="header__navigation--icon">&nbsp;</span>
+        </div>
         <div class="header__navigation--background">&nbsp;</div>
         <nav class="header__nav">
           <ul class="header__nav-list">
@@ -46,7 +48,7 @@
               <a href="#" class="header__nav-link">Portfolio</a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Contact</a>
+              <a href="#footer" class="header__nav-link">Contact</a>
             </li>
           </ul>
         </nav>
@@ -57,7 +59,7 @@
     <section class="about__content">About Content</section>
     <section class="services">Services</section>
     <section class="portfolio">Portfolio</section>
-    <footer class="footer">Footer1</footer>
+    <footer class="footer" id="footer">Footer1</footer>
 
     <script src="js/app.js"></script>
   </body>
