add sprite icons and complete hero section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
   <body class="container">
     <header class="header">
       <div class="header__logo-box">
-        <img
-          src="img/6960162146_115c1e1e-6d87-4ba7-8a3a-28c289903f2bini.png"
-          alt="Logo"
-          class="header__logo"
-        />
+        <img src="img/logo_size_invert.jpg" alt="Logo" class="header__logo" />
       </div>
 
       <div class="header__navigation btn">
@@ -54,7 +50,13 @@
         </nav>
       </div>
     </header>
-    <section class="hero-section">Hero Section</section>
+    <section class="hero-section">
+      <p class="title-paragraph">Hi! I'm Usman</p>
+      <h1 class="heading-1">A Web Developer</h1>
+      <a href="#" class="cta"
+        >Avaiable for <span>freelance</span> work &darr;</a
+      >
+    </section>
     <section class="about__picture">About Picture</section>
     <section class="about__content">About Content</section>
     <section class="services">Services</section>
