Write about section markup

--- a/index.html
+++ b/index.html
@@ -57,8 +57,70 @@
         >Avaiable for <span>freelance</span> work &darr;</a
       >
     </section>
-    <section class="about__picture">About Picture</section>
-    <section class="about__content">About Content</section>
+    <section class="about__picture">
+      <img
+        src="img/Snapchat-1050170616.jpg"
+        alt="Usman's Picture"
+        class="about__picture--img"
+      />
+    </section>
+    <section class="about__content">
+      <h1 class="heading-1 about__heading">About</h1>
+      <div class="about__detail">
+        <h2 class="heading-2">Hi! I'm Usman</h2>
+        <p class="detail-paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+          consequatur dolor expedita iste laudantium placeat in minus non
+          impedit aperiam! Dignissimos temporibus. Nulla ea quod soluta
+          veritatis.
+        </p>
+        <ul class="about__content--social-icons">
+          <li class="about__content--icon-item">
+            <a href="#" class="about__content--link">
+              <svg class="about__content--icon">
+                <use xlink:href="img/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="about__content--icon-item">
+            <a href="#" class="about__content--link">
+              <svg class="about__content--icon">
+                <use xlink:href="img/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="about__content--icon-item">
+            <a href="#" class="about__content--link">
+              <svg class="about__content--icon">
+                <use xlink:href="img/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="about__content--icon-item">
+            <a href="#" class="about__content--link">
+              <svg class="about__content--icon">
+                <use xlink:href="img/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="about__content--icon-item">
+            <a href="#" class="about__content--link">
+              <svg class="about__content--icon">
+                <use xlink:href="img/sprite.svg#icon-github"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+        <h3 class="heading-3">Contact me here</h3>
+        <p class="detail-paragraph">
+          Email: <span class="secondary-text"> us.man.webbiz@gmail.com</span>
+        </p>
+        <p class="detail-paragraph">
+          Phone / Whatsapp: <span class="secondary-text"> +92 349 3882796</span>
+        </p>
+      </div>
+    </section>
     <section class="services">Services</section>
     <section class="portfolio">Portfolio</section>
     <footer class="footer" id="footer">Footer1</footer>
