--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="#" class="header__nav-link">Home</a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link">About</a>
+              <a href="#about" class="header__nav-link">About</a>
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link">Services</a>
@@ -57,7 +57,7 @@
         >Avaiable for <span>freelance</span> work &darr;</a
       >
     </section>
-    <section class="about__picture">
+    <section class="about__picture" id="about">
       <img
         src="img/Snapchat-1050170616.jpg"
         alt="Usman's Picture"
@@ -65,8 +65,8 @@
       />
     </section>
     <section class="about__content">
-      <h1 class="heading-1 about__heading">About</h1>
-      <div class="about__detail">
+      <h1 class="heading-1 about__content--heading">About</h1>
+      <div class="about__content--detail">
         <h2 class="heading-2">Hi! I'm Usman</h2>
         <p class="detail-paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
@@ -112,11 +112,11 @@
           </li>
         </ul>
 
-        <h3 class="heading-3">Contact me here</h3>
-        <p class="detail-paragraph">
+        <h3 class="heading-3">Contact me here!</h3>
+        <p class="detail-paragraph about__content--contact-detail">
           Email: <span class="secondary-text"> us.man.webbiz@gmail.com</span>
         </p>
-        <p class="detail-paragraph">
+        <p class="detail-paragraph about__content--contact-detail">
           Phone / Whatsapp: <span class="secondary-text"> +92 349 3882796</span>
         </p>
       </div>
