--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body class="container">
     <header class="header">
       <div class="header__logo-box">
-        <img src="img/logo_size_invert.jpg" alt="Logo" class="header__logo" />
+        <img src="img/logo1.png" alt="Logo" class="header__logo" />
       </div>
 
       <div class="header__navigation btn">
@@ -67,7 +67,7 @@
     <section class="about__content">
       <h1 class="heading-1 about__content--heading">About</h1>
       <div class="about__content--detail">
-        <h2 class="heading-2">Hi! I'm Usman</h2>
+        <h2 class="heading-2">A bit about myself!</h2>
         <p class="detail-paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
           consequatur dolor expedita iste laudantium placeat in minus non
