Fix hamburger animation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="shortcut icon"
@@ -54,7 +55,7 @@
       <p class="title-paragraph">Hi! I'm Usman</p>
       <h1 class="heading-1">A Web Developer</h1>
       <a href="#" class="cta"
-        >Avaiable for <span>freelance</span> work &darr;</a
+        >available for <span>freelance</span> work &darr;</a
       >
     </section>
     <section class="about__picture" id="about">
@@ -125,6 +126,6 @@
     <section class="portfolio">Portfolio</section>
     <footer class="footer" id="footer">Footer1</footer>
 
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
   </body>
 </html>
