--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       />
     </section>
     <section class="about__content">
-      <h1 class="heading-1 about__content--heading">About</h1>
+      <h1 class="heading-1 about__content--heading bold-heading">About</h1>
       <div class="about__content--detail">
         <h2 class="heading-2">A bit about myself!</h2>
         <p class="detail-paragraph">
@@ -122,7 +122,11 @@
         </p>
       </div>
     </section>
-    <section class="services">Services</section>
+    <section class="services">
+      <h1 class="heading-1 services__heading-1 bold-heading">Services</h1>
+      <h2 class="heading-2 services__heading-2">What I do!</h2>
+      <div class="services__cards">Services</div>
+    </section>
     <section class="portfolio">Portfolio</section>
     <footer class="footer" id="footer">Footer1</footer>
 
