Complete services section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <section class="hero-section">
       <p class="title-paragraph">Hi! I'm Usman</p>
-      <h1 class="heading-1">A Web Developer</h1>
+      <h1 class="heading-1 hero-section__heading">A Web Developer</h1>
       <a href="#" class="cta"
         >available for <span>freelance</span> work &darr;</a
       >
@@ -115,17 +115,42 @@
 
         <h3 class="heading-3">Contact me here!</h3>
         <p class="detail-paragraph about__content--contact-detail">
-          Email: <span class="secondary-text"> us.man.webbiz@gmail.com</span>
+          Email: <span class="secondary-text">us.man.webbiz@gmail.com</span>
         </p>
         <p class="detail-paragraph about__content--contact-detail">
-          Phone / Whatsapp: <span class="secondary-text"> +92 349 3882796</span>
+          Phone / Whatsapp: <span class="secondary-text">+92 349 3882796</span>
         </p>
       </div>
     </section>
     <section class="services">
       <h1 class="heading-1 services__heading-1 bold-heading">Services</h1>
       <h2 class="heading-2 services__heading-2">What I do!</h2>
-      <div class="services__cards">Services</div>
+      <div class="services__cards">
+        <div class="services__card">
+          <svg class="services__icon">
+            <use xlink:href="img/sprite.svg#icon-layers"></use>
+          </svg>
+          <h4 class="heading-4 card__heading">UI/UX Design</h4>
+          <h4 class="heading-4 card__heading">Mobile App Design</h4>
+          <h4 class="heading-4 card__heading">Responsive Design</h4>
+        </div>
+        <div class="services__card">
+          <svg class="services__icon">
+            <use xlink:href="img/sprite.svg#icon-cogs"></use>
+          </svg>
+          <h4 class="heading-4 card__heading">Product Strategy</h4>
+          <h4 class="heading-4 card__heading">Design Sprints</h4>
+          <h4 class="heading-4 card__heading">UX Strategy</h4>
+        </div>
+        <div class="services__card">
+          <svg class="services__icon">
+            <use xlink:href="img/sprite.svg#icon-embed2"></use>
+          </svg>
+          <h4 class="heading-4 card__heading">HTML/CSS</h4>
+          <h4 class="heading-4 card__heading">Prototyping</h4>
+          <h4 class="heading-4 card__heading">User Testing</h4>
+        </div>
+      </div>
     </section>
     <section class="portfolio">Portfolio</section>
     <footer class="footer" id="footer">Footer1</footer>
