--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body class="container">
     <header class="header">
       <div class="header__logo-box">
-        <img src="img/logo1.png" alt="Logo" class="header__logo" />
+        <a href="index.html"
+          ><img src="img/logo1.png" alt="Logo" class="header__logo"
+        /></a>
       </div>
 
       <div class="header__navigation btn">
@@ -39,7 +41,7 @@
               <a href="#about" class="header__nav-link">About</a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Services</a>
+              <a href="#services" class="header__nav-link">Services</a>
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link">Portfolio</a>
@@ -122,7 +124,7 @@
         </p>
       </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
       <h1 class="heading-1 services__heading-1 bold-heading">Services</h1>
       <h2 class="heading-2 services__heading-2">What I do!</h2>
       <div class="services__cards">
