Build portfolio section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a href="#services" class="header__nav-link">Services</a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Portfolio</a>
+              <a href="#portfolio" class="header__nav-link">Portfolio</a>
             </li>
             <li class="header__nav-item">
               <a href="#footer" class="header__nav-link">Contact</a>
@@ -154,7 +154,95 @@
         </div>
       </div>
     </section>
-    <section class="portfolio">Portfolio</section>
+    <section class="portfolio" id="portfolio">
+      <h1 class="heading-1 portfolio__heading-1 bold-heading">Portfolio</h1>
+      <h2 class="heading-2 portfolio__heading-2">
+        Checkout a few of my works!
+      </h2>
+      <div class="portfolio-blocks">
+        <!-- Block Start -->
+        <div class="portfolio-block">
+          <div class="portfolio-block__img-box">
+            <span class="portfolio-block__img portfolio-block__img-1"
+              >&nbsp;</span
+            >
+          </div>
+          <div class="portfolio-block__details-box">
+            <h5 class="heading-5">Application</h5>
+            <h2 class="heading-2 portfolio-block__details-box__heading">
+              Even the all-powerful Pointing has no control
+            </h2>
+            <p class="detail-paragraph">
+              Even the all-powerful Pointing has no control about the blind
+              texts it is an almost unorthographic life One day however a small
+              line of blind text.
+            </p>
+            <ul class="portfolio-block__stack-icons">
+              <li class="portfolio-block__icon-item">
+                <svg class="about__content--icon">
+                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Block End -->
+        <!-- Block Start -->
+        <div class="portfolio-block">
+          <div class="portfolio-block__img-box">
+            <span class="portfolio-block__img portfolio-block__img-2"
+              >&nbsp;</span
+            >
+          </div>
+          <div class="portfolio-block__details-box">
+            <h5 class="heading-5">Landing Page</h5>
+            <h2 class="heading-2 portfolio-block__details-box__heading">
+              Even the all-powerful Pointing has no control
+            </h2>
+            <p class="detail-paragraph">
+              Even the all-powerful Pointing has no control about the blind
+              texts it is an almost unorthographic life One day however a small
+              line of blind text.
+            </p>
+            <ul class="portfolio-block__stack-icons">
+              <li class="portfolio-block__icon-item">
+                <svg class="about__content--icon">
+                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Block End -->
+        <!-- Block Start -->
+        <div class="portfolio-block">
+          <div class="portfolio-block__img-box">
+            <span class="portfolio-block__img portfolio-block__img-3"
+              >&nbsp;</span
+            >
+          </div>
+          <div class="portfolio-block__details-box">
+            <h5 class="heading-5">Website Design</h5>
+            <h2 class="heading-2 portfolio-block__details-box__heading">
+              Even the all-powerful Pointing has no control
+            </h2>
+            <p class="detail-paragraph">
+              Even the all-powerful Pointing has no control about the blind
+              texts it is an almost unorthographic life One day however a small
+              line of blind text.
+            </p>
+            <ul class="portfolio-block__stack-icons">
+              <li class="portfolio-block__icon-item">
+                <svg class="about__content--icon">
+                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Block End -->
+      </div>
+    </section>
     <footer class="footer" id="footer">Footer1</footer>
 
     <!-- <script src="js/app.js"></script> -->
