Few minor changes

--- a/index.html
+++ b/index.html
@@ -35,19 +35,23 @@
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Home</a>
+              <a href="#" class="header__nav-link btn-primary">Home</a>
             </li>
             <li class="header__nav-item">
-              <a href="#about" class="header__nav-link">About</a>
+              <a href="#about" class="header__nav-link btn-primary">About</a>
             </li>
             <li class="header__nav-item">
-              <a href="#services" class="header__nav-link">Services</a>
+              <a href="#services" class="header__nav-link btn-primary"
+                >Services</a
+              >
             </li>
             <li class="header__nav-item">
-              <a href="#portfolio" class="header__nav-link">Portfolio</a>
+              <a href="#portfolio" class="header__nav-link btn-primary"
+                >Portfolio</a
+              >
             </li>
             <li class="header__nav-item">
-              <a href="#footer" class="header__nav-link">Contact</a>
+              <a href="#footer" class="header__nav-link btn-primary">Contact</a>
             </li>
           </ul>
         </nav>
@@ -56,7 +60,7 @@
     <section class="hero-section">
       <p class="title-paragraph">Hi! I'm Usman</p>
       <h1 class="heading-1 hero-section__heading">A Web Developer</h1>
-      <a href="#" class="cta"
+      <a href="#" class="cta btn-primary"
         >available for <span>freelance</span> work &darr;</a
       >
     </section>
@@ -184,6 +188,9 @@
                 </svg>
               </li>
             </ul>
+            <a href="#" class="portfolio-block__view-project btn-primary"
+              >View project</a
+            >
           </div>
         </div>
         <!-- Block End -->
@@ -211,6 +218,9 @@
                 </svg>
               </li>
             </ul>
+            <a href="#" class="portfolio-block__view-project btn-primary"
+              >View project</a
+            >
           </div>
         </div>
         <!-- Block End -->
@@ -238,6 +248,9 @@
                 </svg>
               </li>
             </ul>
+            <a href="#" class="portfolio-block__view-project btn-primary"
+              >View project</a
+            >
           </div>
         </div>
         <!-- Block End -->
