Make parallax effect (finally)

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
           Email: <span class="secondary-text">us.man.webbiz@gmail.com</span>
         </p>
         <p class="detail-paragraph about__content--contact-detail">
-          Phone / Whatsapp: <span class="secondary-text">+92 349 3882796</span>
+          Phone / Whatsapp:
+          <span class="secondary-text">+92 349 3882796</span>
         </p>
       </div>
     </section>
@@ -165,8 +166,8 @@
       </h2>
       <div class="portfolio-blocks">
         <!-- Block Start -->
-        <div class="portfolio-block">
-          <div class="portfolio-block__img-box">
+        <div class="portfolio-block" id="block-1">
+          <div class="portfolio-block__img-box" id="port-img1">
             <span class="portfolio-block__img portfolio-block__img-1"
               >&nbsp;</span
             >
@@ -176,15 +177,31 @@
             <h2 class="heading-2 portfolio-block__details-box__heading">
               Even the all-powerful Pointing has no control
             </h2>
-            <p class="detail-paragraph">
+            <p class="detail-paragraph portfolio-block__details-box__paragraph">
               Even the all-powerful Pointing has no control about the blind
               texts it is an almost unorthographic life One day however a small
               line of blind text.
             </p>
             <ul class="portfolio-block__stack-icons">
+              <p class="detail-paragraph">Stack used:&nbsp;</p>
               <li class="portfolio-block__icon-item">
-                <svg class="about__content--icon">
-                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-html5"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-css3"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-javascript"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-sass"></use>
                 </svg>
               </li>
             </ul>
@@ -195,8 +212,8 @@
         </div>
         <!-- Block End -->
         <!-- Block Start -->
-        <div class="portfolio-block">
-          <div class="portfolio-block__img-box">
+        <div class="portfolio-block" id="block-2">
+          <div class="portfolio-block__img-box" id="port-img2">
             <span class="portfolio-block__img portfolio-block__img-2"
               >&nbsp;</span
             >
@@ -206,15 +223,31 @@
             <h2 class="heading-2 portfolio-block__details-box__heading">
               Even the all-powerful Pointing has no control
             </h2>
-            <p class="detail-paragraph">
+            <p class="detail-paragraph portfolio-block__details-box__paragraph">
               Even the all-powerful Pointing has no control about the blind
               texts it is an almost unorthographic life One day however a small
               line of blind text.
             </p>
             <ul class="portfolio-block__stack-icons">
+              <p class="detail-paragraph">Stack used:&nbsp;</p>
               <li class="portfolio-block__icon-item">
-                <svg class="about__content--icon">
-                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-html5"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-css3"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-javascript"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-sass"></use>
                 </svg>
               </li>
             </ul>
@@ -225,8 +258,8 @@
         </div>
         <!-- Block End -->
         <!-- Block Start -->
-        <div class="portfolio-block">
-          <div class="portfolio-block__img-box">
+        <div class="portfolio-block" id="block-3">
+          <div class="portfolio-block__img-box" id="port-img3">
             <span class="portfolio-block__img portfolio-block__img-3"
               >&nbsp;</span
             >
@@ -236,15 +269,31 @@
             <h2 class="heading-2 portfolio-block__details-box__heading">
               Even the all-powerful Pointing has no control
             </h2>
-            <p class="detail-paragraph">
+            <p class="detail-paragraph portfolio-block__details-box__paragraph">
               Even the all-powerful Pointing has no control about the blind
               texts it is an almost unorthographic life One day however a small
               line of blind text.
             </p>
             <ul class="portfolio-block__stack-icons">
+              <p class="detail-paragraph">Stack used:&nbsp;</p>
               <li class="portfolio-block__icon-item">
-                <svg class="about__content--icon">
-                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-html5"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-css3"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-javascript"></use>
+                </svg>
+              </li>
+              <li class="portfolio-block__icon-item">
+                <svg class="portfolio-block--icon">
+                  <use xlink:href="img/sprite.svg#icon-sass"></use>
                 </svg>
               </li>
             </ul>
@@ -255,6 +304,12 @@
         </div>
         <!-- Block End -->
       </div>
+    </section>
+    <section class="contact" id="contact">
+      <h1 class="heading-1 portfolio__heading-1 bold-heading">Contact Me</h1>
+      <h2 class="heading-2 portfolio__heading-2">
+        Reach out for a new project or just say hello
+      </h2>
     </section>
     <footer class="footer" id="footer">Footer1</footer>
 
