fix section heading and add contact grid

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
               >
             </li>
             <li class="header__nav-item">
-              <a href="#footer" class="header__nav-link btn-primary">Contact</a>
+              <a href="#contact" class="header__nav-link btn-primary"
+                >Contact</a
+              >
             </li>
           </ul>
         </nav>
@@ -60,7 +62,7 @@
     <section class="hero-section">
       <p class="title-paragraph">Hi! I'm Usman</p>
       <h1 class="heading-1 hero-section__heading">A Web Developer</h1>
-      <a href="#" class="cta btn-primary"
+      <a href="#contact" class="cta btn-primary"
         >available for <span>freelance</span> work &darr;</a
       >
     </section>
@@ -306,10 +308,17 @@
       </div>
     </section>
     <section class="contact" id="contact">
-      <h1 class="heading-1 portfolio__heading-1 bold-heading">Contact Me</h1>
-      <h2 class="heading-2 portfolio__heading-2">
-        Reach out for a new project or just say hello
+      <h1 class="heading-1 contact__heading-1 bold-heading">Contact Me</h1>
+      <h2 class="heading-2 contact__heading-2">
+        Reach out for a new project or just say hello!
       </h2>
+      <div class="contact__form-box">
+        <h3 class="heading-3 contact__form-heading">SEND ME A MESSAGE</h3>
+        <form action="get" class="contact__form">
+          <p>form</p>
+        </form>
+        <span class="contact__img">&nbsp;</span>
+      </div>
     </section>
     <footer class="footer" id="footer">Footer1</footer>
 
