--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
     <section class="services" id="services">
       <h1 class="heading-1 services__heading-1 bold-heading">Services</h1>
-      <h2 class="heading-2 services__heading-2">What I do!</h2>
+      <h2 class="heading-2 services__heading-2 btn-primary">What I do!</h2>
       <div class="services__cards">
         <div class="services__card">
           <svg class="services__icon">
@@ -163,7 +163,7 @@
     </section>
     <section class="portfolio" id="portfolio">
       <h1 class="heading-1 portfolio__heading-1 bold-heading">Portfolio</h1>
-      <h2 class="heading-2 portfolio__heading-2">
+      <h2 class="heading-2 portfolio__heading-2 btn-primary">
         Checkout a few of my works!
       </h2>
       <div class="portfolio-blocks">
@@ -309,7 +309,7 @@
     </section>
     <section class="contact" id="contact">
       <h1 class="heading-1 contact__heading-1 bold-heading">Contact Me</h1>
-      <h2 class="heading-2 contact__heading-2">
+      <h2 class="heading-2 contact__heading-2 btn-primary">
         Reach out for a new project or just say hello!
       </h2>
       <div class="contact__form-box">
