--- a/index.html
+++ b/index.html
@@ -307,17 +307,55 @@
         <!-- Block End -->
       </div>
     </section>
-    <section class="contact" id="contact">
+    <section class="contact">
       <h1 class="heading-1 contact__heading-1 bold-heading">Contact Me</h1>
       <h2 class="heading-2 contact__heading-2 btn-primary">
         Reach out for a new project or just say hello!
       </h2>
-      <div class="contact__form-box">
+      <div class="contact__form-box" id="contact">
         <h3 class="heading-3 contact__form-heading">SEND ME A MESSAGE</h3>
-        <form action="get" class="contact__form">
-          <p>form</p>
+        <form action="#" class="form">
+          <div class="form__group">
+            <input
+              type="text"
+              class="form__input"
+              placeholder="Your Name"
+              id="name"
+              required
+            />
+            <label for="name" class="form__label">Your Name</label>
+          </div>
+          <div class="form__group">
+            <input
+              type="email"
+              class="form__input"
+              placeholder="Your Email"
+              id="email"
+              required
+            />
+            <label for="email" class="form__label">Your Email</label>
+          </div>
+          <div class="form__group">
+            <input
+              type="text"
+              class="form__input"
+              placeholder="Subject (Optional)"
+              id="subject"
+            />
+            <label for="subject" class="form__label">Subject (Optional)</label>
+          </div>
+          <div class="form__group">
+            <textarea
+              class="form__input"
+              name="message"
+              id="message"
+              cols="50"
+              rows="6"
+              placeholder="Your Message"
+            ></textarea>
+            <label for="message" class="form__label">Your Message</label>
+          </div>
         </form>
-        <span class="contact__img">&nbsp;</span>
       </div>
     </section>
     <footer class="footer" id="footer">Footer1</footer>
