--- a/index.html
+++ b/index.html
@@ -361,7 +361,12 @@
         </form>
       </div>
     </section>
-    <footer class="footer" id="footer">Footer1</footer>
+    <footer class="footer" id="footer">
+      <p class="detail-paragraph footer__text">
+        Copyright &copy;2022 All rights reserved |
+        <a href="index.html" class="secondary-text footer__link">Us Man</span>
+      </p>
+    </footer>
 
     <!-- <script src="js/app.js"></script> -->
   </body>
