Finish Contact Section

--- a/index.html
+++ b/index.html
@@ -83,38 +83,38 @@
           impedit aperiam! Dignissimos temporibus. Nulla ea quod soluta
           veritatis.
         </p>
-        <ul class="about__content--social-icons">
-          <li class="about__content--icon-item">
-            <a href="#" class="about__content--link">
-              <svg class="about__content--icon">
+        <ul class="about__content--social-icons social-icons">
+          <li class="about__content--icon-item social-icons__icon-item">
+            <a href="#" class="about__content--link social-icons__link">
+              <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
-          <li class="about__content--icon-item">
-            <a href="#" class="about__content--link">
-              <svg class="about__content--icon">
+          <li class="about__content--icon-item social-icons__icon-item">
+            <a href="#" class="about__content--link social-icons__link">
+              <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
-          <li class="about__content--icon-item">
-            <a href="#" class="about__content--link">
-              <svg class="about__content--icon">
-                <use xlink:href="img/sprite.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="about__content--icon-item">
-            <a href="#" class="about__content--link">
-              <svg class="about__content--icon">
+          <li class="about__content--icon-item social-icons__icon-item">
+            <a href="#" class="about__content--link social-icons__link">
+              <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="about__content--icon-item">
-            <a href="#" class="about__content--link">
-              <svg class="about__content--icon">
+          <li class="about__content--icon-item social-icons__icon-item">
+            <a href="#" class="about__content--link social-icons__link">
+              <svg class="about__content--icon social-icons__icon">
+                <use xlink:href="img/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="about__content--icon-item social-icons__icon-item">
+            <a href="#" class="about__content--link social-icons__link">
+              <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use>
               </svg>
             </a>
@@ -313,8 +313,8 @@
         Reach out for a new project or just say hello!
       </h2>
       <div class="contact__form-box" id="contact">
-        <h3 class="heading-3 contact__form-heading">SEND ME A MESSAGE</h3>
         <form action="#" class="form">
+          <h3 class="heading-3 contact__form-heading">SEND ME A MESSAGE</h3>
           <div class="form__group">
             <input
               type="text"
@@ -359,6 +359,45 @@
             <button class="form__submit btn-primary">Submit</button>
           </div>
         </form>
+        <div class="contact__social-icons-box">
+          <ul class="contact--social-icons social-icons">
+            <li class="contact--icon-item social-icons__icon-item">
+              <a href="#" class="contact--link social-icons__link">
+                <svg class="contact--icon social-icons__icon">
+                  <use xlink:href="img/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="contact--icon-item social-icons__icon-item">
+              <a href="#" class="contact--link social-icons__link">
+                <svg class="contact--icon social-icons__icon">
+                  <use xlink:href="img/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="contact--icon-item social-icons__icon-item">
+              <a href="#" class="contact--link social-icons__link">
+                <svg class="contact--icon social-icons__icon">
+                  <use xlink:href="img/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="contact--icon-item social-icons__icon-item">
+              <a href="#" class="contact--link social-icons__link">
+                <svg class="contact--icon social-icons__icon">
+                  <use xlink:href="img/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="contact--icon-item social-icons__icon-item">
+              <a href="#" class="contact--link social-icons__link">
+                <svg class="contact--icon social-icons__icon">
+                  <use xlink:href="img/sprite.svg#icon-github"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <footer class="footer" id="footer">
