--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     <footer class="footer" id="footer">
       <p class="detail-paragraph footer__text">
         Copyright &copy;2022 All rights reserved |
-        <a href="index.html" class="secondary-text footer__link">Us Man</span>
+        <a href="index.html" class="secondary-text footer__link">Us Man</a>
       </p>
     </footer>
 
