Write media queries for medium devices

--- a/index.html
+++ b/index.html
@@ -67,11 +67,18 @@
       >
     </section>
     <section class="about__picture" id="about">
-      <img
-        src="img/Snapchat-1050170616.jpg"
-        alt="Usman's Picture"
-        class="about__picture--img"
-      />
+      <picture class="about__picture--img" id="about-img">
+        <source
+          srcset="img/Picsart_22-03-28_21-59-42-464.jpg"
+          media="(max-width: 52.5em)"
+          class="about__picture--img"
+        />
+        <img
+          srcset="img/Snapchat-1050170616.jpg"
+          class="about__picture--img"
+          alt="Usman's Picture"
+        />
+      </picture>
     </section>
     <section class="about__content">
       <h1 class="heading-1 about__content--heading bold-heading">About</h1>
@@ -85,14 +92,22 @@
         </p>
         <ul class="about__content--social-icons social-icons">
           <li class="about__content--icon-item social-icons__icon-item">
-            <a href="#" class="about__content--link social-icons__link">
+            <a
+              href="https://www.facebook.com/us.man.webbiz"
+              class="about__content--link social-icons__link"
+              target="_blank"
+            >
               <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="about__content--icon-item social-icons__icon-item">
-            <a href="#" class="about__content--link social-icons__link">
+            <a
+              href="https://twitter.com/us_man_web"
+              class="about__content--link social-icons__link"
+              target="_blank"
+            >
               <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
@@ -113,7 +128,11 @@
             </a>
           </li>
           <li class="about__content--icon-item social-icons__icon-item">
-            <a href="#" class="about__content--link social-icons__link">
+            <a
+              href="https://github.com/usman-FE"
+              class="about__content--link social-icons__link"
+              target="_blank"
+            >
               <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use>
               </svg>
@@ -362,14 +381,22 @@
         <div class="contact__social-icons-box">
           <ul class="contact--social-icons social-icons">
             <li class="contact--icon-item social-icons__icon-item">
-              <a href="#" class="contact--link social-icons__link">
+              <a
+                href="https://www.facebook.com/us.man.webbiz"
+                class="contact--link social-icons__link"
+                target="_blank"
+              >
                 <svg class="contact--icon social-icons__icon">
                   <use xlink:href="img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="contact--icon-item social-icons__icon-item">
-              <a href="#" class="contact--link social-icons__link">
+              <a
+                href="https://twitter.com/us_man_web"
+                class="contact--link social-icons__link"
+                target="_blank"
+              >
                 <svg class="contact--icon social-icons__icon">
                   <use xlink:href="img/sprite.svg#icon-twitter"></use>
                 </svg>
@@ -390,7 +417,11 @@
               </a>
             </li>
             <li class="contact--icon-item social-icons__icon-item">
-              <a href="#" class="contact--link social-icons__link">
+              <a
+                href="https://github.com/usman-FE"
+                class="contact--link social-icons__link"
+                target="_blank"
+              >
                 <svg class="contact--icon social-icons__icon">
                   <use xlink:href="img/sprite.svg#icon-github"></use>
                 </svg>
