Add progress bar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <title>US MAN</title>
   </head>
   <body class="container">
+    <!-- Progress Bar -->
+    <div class="header1">
+      <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+      </div>
+    </div>
+    <!-- Progress Bar End -->
+
     <header class="header">
       <div class="header__logo-box">
         <a href="index.html"
@@ -135,6 +143,17 @@
             >
               <svg class="about__content--icon social-icons__icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="about__content--icon-item social-icons__icon-item">
+            <a
+              href="https://www.fiverr.com/share/j7a7zG"
+              class="about__content--link social-icons__link"
+              target="_blank"
+            >
+              <svg class="about__content--icon social-icons__icon">
+                <use xlink:href="img/sprite.svg#icon-fiverr"></use>
               </svg>
             </a>
           </li>
@@ -424,6 +443,17 @@
               >
                 <svg class="contact--icon social-icons__icon">
                   <use xlink:href="img/sprite.svg#icon-github"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="contact--icon-item social-icons__icon-item">
+              <a
+                href="https://www.fiverr.com/share/j7a7zG"
+                class="contact--link social-icons__link"
+                target="_blank"
+              >
+                <svg class="contact--icon social-icons__icon">
+                  <use xlink:href="img/sprite.svg#icon-fiverr"></use>
                 </svg>
               </a>
             </li>
