--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="about__content--detail">
         <h2 class="heading-2">A bit about myself!</h2>
         <p class="detail-paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
           consequatur dolor expedita iste laudantium placeat in minus non
           impedit aperiam! Dignissimos temporibus. Nulla ea quod soluta
           veritatis.
