final touches to the design

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <p class="detail-paragraph">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
           consequatur dolor expedita iste laudantium placeat in minus non
-          impedit aperiam! Dignissimos temporibus. Nulla ea quod soluta
+          impedit aperiam! Dignissimos, temporibus. Nulla ea quod soluta
           veritatis.
         </p>
         <ul class="about__content--social-icons social-icons">
